[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wolf-trading-os"
version = "0.1.0"
description = "Wolf Trading OS — Phase 1: Option Alpha ingestion, analytics, and dashboard. No order execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "streamlit>=1.35",
    "plotly>=5.22",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
]

[project.scripts]
wolf-trading-os = "wolf_trading_os.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wolf_trading_os"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Bot names legitimately contain en/em dashes as environment-marker
# delimiters ("Bot – Live"); the parser must match them literally.
allowed-confusables = ["–", "—"]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = [
    "E501",  # handled by formatter
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["wolf_trading_os"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["streamlit.*", "plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The dashboard is Streamlit-driven UI glue; keep it typed but relax return-value
# strictness for third-party untyped decorators such as @st.cache_data.
module = ["wolf_trading_os.dashboard.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that require a running PostgreSQL instance",
]

[tool.coverage.run]
source = ["src/wolf_trading_os"]
